<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_item_donate">Donate</string>
	<string name="menu_item_login">Login</string>
	<string name="menu_item_logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_news">News</string>
    <string name="menu_item_browse_games">Browse Games</string>
    <string name="menu_item_latest_achievements">Latest Achievements</string>
    <string name="menu_item_latest_screenshots">Latest Screenshots</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_upcoming_games">Upcoming Games</string>
    <string name="menu_item_about">About</string>
	<string name="menu_item_add_to_favorites">Add to Favorites</string>
	
    <string name="nav_header_subtitle">XboxAchievements.com</string>
    <string name="ab_latest_screenshots_title">Latest Screenshots</string>
    <string name="ab_about_title">About</string>
    <string name="ab_games_title">Games</string>
    <string name="ab_latest_achievements_title">Latest Achievements</string>
    <string name="ab_news_title">News</string>
    <string name="ab_settings_title">Settings</string>
    <string name="ab_upcoming_games_title">Upcoming Games</string>
    <string name="ab_previews_title">Previews</string>
    <string name="menu_item_open_in_browser">Open in Browser</string>
    <string name="menu_item_share">Share</string>
    <string name="ab_article">Article</string>
    <string name="menu_item_previews">Previews</string>
    <string name="ab_interviews_title">Interviews</string>
    <string name="menu_item_interviews">Interviews</string>
    <string name="menu_item_browse">Browse</string>
    <string name="menu_item_platforms">Platforms</string>
    <string name="menu_item_arcade">Arcade</string>
    <string name="menu_item_xbox_360">Xbox 360</string>
    <string name="menu_item_xbox_one">Xbox One</string>
    <string name="menu_item_japanese">Japanese</string>
    <string name="menu_item_gfwl">GFWL</string>
    <string name="menu_item_windows_8">Windows 8</string>
    <string name="menu_item_mobile">Mobile</string>
    <string name="menu_item_reset">Reset</string>
    <string name="view_screenshots">View Screenshots</string>
    <string name="view_comments">View Comments</string>
    <string name="about_disclaimer">
        This application it is not affiliated with XboxAchievements.com and it is an unofficial application.
        If you will like to report an issue, please use the XDA Thread or feel free to sent me an email.
    </string>
	<string name="xda_thread">https://forum.xda-developers.com/android/apps-games/app-xa-unofficial-xboxachievements-com-t3600450</string>
	<string name="default_signature">Sent via Unofficial XboxAchievements Android App</string>
    <string name="menu_item_search">Search</string>
    <string name="search_hint">Search Games</string>
    <string name="ab_search_result">Search Result</string>

</resources>
