<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_open_in_browser"
        android:orderInCategory="91"
        android:title="@string/menu_item_open_in_browser"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_share"
        android:orderInCategory="92"
        android:title="@string/menu_item_share"
        app:showAsAction="never"
        android:actionProviderClass="android.widget.ShareActionProvider"
        tools:ignore="AppCompatResource" />
	<item
        android:id="@+id/menu_item_add_to_favorites"
        android:orderInCategory="90"
        android:title="@string/menu_item_add_to_favorites"
        android:visible="false"
        app:showAsAction="never"
        android:actionProviderClass="android.widget.ShareActionProvider"
        tools:ignore="AppCompatResource" />
</menu>
